--- a/cloud_monitoring_dashboard/frontend/docs.html
+++ b/cloud_monitoring_dashboard/frontend/docs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Documentation - Cloud Monitoring Dashboard</title>
-    <!-- Professional monitoring dashboard favicon -->
+    <!--professional monitoring dashboard favicon-->
     <link rel="icon" type="image/png" href="/static/icons8-layers-16.png">
     <style>
         * {
